opam-version: "1.2"
version: "0.1"
maintainer: "info@ulrichschoepp.de"
authors: ["Ulrich Schoepp"]
homepage: "https://github.com/uelis/modular"
bug-reports: "https://github.com/uelis/modular/issues"
dev-repo: "https://github.com/uelis/modular.git"
license: "GPL-2.0"
build: [
  ["jbuilder" "build" "--only" "modular" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder" { build }
  "core" { build & >= "v0.9.0"}
  "llvm" { build }
  "yojson" { build }
  "ounit" { build }
]
